--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -4,12 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>CafeJavaNumberTwo</artifactId>
-        <groupId>be.hogent</groupId>
+        <groupId>be.hogent.eindproject</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Controller</artifactId>
+    <artifactId>controller</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>be.hogent.eindproject</groupId>
+            <artifactId>model</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
