--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <junit.version>5.5.2</junit.version>
         <assertj.version>3.14.0</assertj.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
 
     <modules>
@@ -44,6 +45,13 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
