--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <assertj.version>3.14.0</assertj.version>
         <lombok.version>1.18.10</lombok.version>
         <mysql-connector-java.version>8.0.19</mysql-connector-java.version>
+        <mockito.version>3.2.4</mockito.version>
     </properties>
 
     <modules>
@@ -41,9 +42,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
